# shellcode

./: .gitignore  CMakeLists.txt  main.c  shellcode.asm
shellcodes/: hello.asm  reverse_shell.asm
